<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e6e6e6"
    tools:context=".MainPage.Message.MessagePersonActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryChatDark"
            android:theme="@style/Base.ThemeOverlay.AppCompat.Dark.ActionBar">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/profile_image"
                android:src="@drawable/default_user"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/username"
                android:layout_marginLeft="25dp"
                android:textColor="#fff"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginStart="25dp"/>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/recycler_view"
        android:layout_below="@+id/bar_layout"
        android:layout_above="@+id/bottom"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:padding="5dp"
        android:id="@+id/bottom"
        android:background="#fff"
        android:layout_alignParentBottom="true"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/text_send"
            android:background="@android:color/transparent"
            android:hint="Type a message..."
            android:layout_toLeftOf="@+id/btn_send"
            android:layout_centerVertical="true"/>

        <ImageButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/ic_btn_send"
            android:id="@+id/btn_send"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>

</RelativeLayout>